cropper modal responsive [COMPLETE], introduced small fixes, new utility css classes

--- a/frontend/src/app/components/auth/register/register.component.scss
+++ b/frontend/src/app/components/auth/register/register.component.scss
@@ -72,13 +72,13 @@ app-validation-feedback-label {
 
 .profile-section {
   width: 100%;
+  height: 100%;
+  gap: 2rem;
 
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
   flex-direction: column;
-
-  gap: 2rem;
 }
 
 .image-selector-container {
