--- a/frontend/src/app/components/modal-essentials/modal-image-cropper/modal-image-cropper.component.scss
+++ b/frontend/src/app/components/modal-essentials/modal-image-cropper/modal-image-cropper.component.scss
@@ -11,14 +11,14 @@
   justify-content: center;
   align-items: center;
 
-  background: rgba(0, 0, 0, 0.55);
+  background: rgba(0, 0, 0, 0.35);
   position: fixed;
   z-index: 1;
 
   pointer-events: none;
   opacity: 0;
 
-  transition: opacity .3s ease;
+  transition: opacity .1s ease;
 }
 
 .modal-cropper-wrapper.active {
@@ -26,6 +26,16 @@
   opacity: 1;
 
   transition: opacity .1s ease;
+}
+
+/* modal info definitions */
+
+.modal-cropper-container .info h3 {
+  margin-bottom: .5rem;
+}
+
+.modal-cropper-container .info p {
+  opacity: .6;
 }
 
 /* modal cropper defintions */
@@ -40,8 +50,8 @@
   justify-content: space-between;
   gap: 2rem;
 
-  padding: 2rem;
-  border-radius: 7px;
+  padding: 1.5rem;
+  border-radius: 8px;
   color: var(--font-color);
 }
 
@@ -56,4 +66,21 @@
 .modal-cropper-container .actions button {
   height: 45px;
   min-width: 150px;
+}
+
+/* responsiveness */
+
+@media only screen and (max-width: 450px) {
+  .modal-cropper-container {
+    width: 100%;
+    height: 100%;
+
+    gap: 0;
+    padding: 1rem;
+    border-radius: 0;
+  }
+
+  .actions {
+    flex-direction: column;
+  }
 }
